# AscEmu

./: .travis.yml  CMakeLists.txt
cmake/Modules/: FindOpenSSL.cmake
cmake/Systems/: Windows.cmake
dep/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/dbcfile/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/loadlib/: CMakeLists.txt
dep/lualib/src/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/collision/: CMakeLists.txt
src/logonserver/: CMakeLists.txt
src/logonserver/Auth/: CMakeLists.txt
src/logonserver/Console/: CMakeLists.txt
src/logonserver/LogonCommServer/: CMakeLists.txt
src/logonserver/Server/: CMakeLists.txt
src/scripts/Battlegrounds/: CMakeLists.txt
src/scripts/Battlegrounds/AlteracValley/: CMakeLists.txt
src/scripts/Battlegrounds/ArathiBasin/: CMakeLists.txt
src/scripts/Battlegrounds/CircleOfBlood/: CMakeLists.txt
src/scripts/Battlegrounds/DalaranSewers/: CMakeLists.txt
src/scripts/Battlegrounds/EyeOfTheStorm/: CMakeLists.txt
src/scripts/Battlegrounds/IsleOfConquest/: CMakeLists.txt
src/scripts/Battlegrounds/RingOfTrials/: CMakeLists.txt
src/scripts/Battlegrounds/RingOfValor/: CMakeLists.txt
src/scripts/Battlegrounds/RuinsOfLordaeron/: CMakeLists.txt
src/scripts/Battlegrounds/StrandOfTheAncient/: CMakeLists.txt
src/scripts/Battlegrounds/WarsongGulch/: CMakeLists.txt
src/scripts/EventScripts/: CMakeLists.txt
src/scripts/ExtraScripts/: CMakeLists.txt
src/scripts/GossipScripts/: CMakeLists.txt
src/scripts/InstanceScripts/: CMakeLists.txt
src/scripts/LuaEngine/: CMakeLists.txt
src/scripts/MapScripts/: CMakeLists.txt
src/scripts/MapScripts/Example/: CMakeLists.txt
src/scripts/MiscScripts/: CMakeLists.txt
src/scripts/QuestScripts/: CMakeLists.txt
src/scripts/SpellHandlers/: CMakeLists.txt
src/scripts/SpellHandlers/LegacyFiles/: CMakeLists.txt
src/scripts/SpellHandlers/Scripts/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/tools/ToolsClassic/map_extractor/: CMakeLists.txt
src/tools/ToolsMop/map_extractor/: CMakeLists.txt
src/tools/ToolsWotLK/mmaps_generator/: CMakeLists.txt
src/world/: CMakeLists.txt
src/world/AI/: CMakeLists.txt
src/world/Chat/: CMakeLists.txt
src/world/Chat/Commands/: CMakeLists.txt
src/world/Data/: CMakeLists.txt
src/world/GameCata/: CMakeLists.txt
src/world/GameCata/Management/: CMakeLists.txt
src/world/GameCata/Movement/: CMakeLists.txt
src/world/GameCata/Network/: CMakeLists.txt
src/world/GameCata/Storage/: CMakeLists.txt
src/world/GameClassic/: CMakeLists.txt
src/world/GameClassic/Network/: CMakeLists.txt
src/world/GameClassic/Storage/: CMakeLists.txt
src/world/GameMop/: CMakeLists.txt
src/world/GameMop/Management/: CMakeLists.txt
src/world/GameMop/Movement/: CMakeLists.txt
src/world/GameMop/Network/: CMakeLists.txt
src/world/GameMop/Storage/: CMakeLists.txt
src/world/GameTBC/: CMakeLists.txt
src/world/GameTBC/Network/: CMakeLists.txt
src/world/GameTBC/Storage/: CMakeLists.txt
src/world/GameWotLK/: CMakeLists.txt
src/world/GameWotLK/Network/: CMakeLists.txt
src/world/GameWotLK/Storage/: CMakeLists.txt
src/world/Management/: CMakeLists.txt
src/world/Management/Battleground/: CMakeLists.txt
src/world/Management/Gossip/: CMakeLists.txt
src/world/Management/Guild/: CMakeLists.txt
src/world/Management/LFG/: CMakeLists.txt
src/world/Management/ObjectUpdates/: CMakeLists.txt
src/world/Map/: CMakeLists.txt
src/world/Map/Area/: CMakeLists.txt
src/world/Movement/: CMakeLists.txt
src/world/Movement/Spline/: CMakeLists.txt
src/world/Objects/: CMakeLists.txt
src/world/Server/: CMakeLists.txt
src/world/Server/Console/: CMakeLists.txt
src/world/Server/LogonCommClient/: CMakeLists.txt
src/world/Server/Packets/: CMakeLists.txt  SmsgSpellFailedOther.h
src/world/Server/Script/: CMakeLists.txt
src/world/Server/Warden/: CMakeLists.txt
src/world/Spell/: CMakeLists.txt
src/world/Spell/Customization/: CMakeLists.txt
src/world/Spell/Definitions/: CMakeLists.txt
src/world/Storage/: CMakeLists.txt
src/world/Storage/DB2/: CMakeLists.txt
src/world/Storage/DBC/: CMakeLists.txt
src/world/Units/: CMakeLists.txt
src/world/Units/Creatures/: CMakeLists.txt
src/world/Units/Players/: CMakeLists.txt
src/world/Units/Summons/: CMakeLists.txt
(+82 files in other folders)
